...
    private var logoImageView = UIImageView()
    
    private var signInButton: UIButton = {
        let button = UIButton()
        button.clipsToBounds = true
        button.layer.cornerRadius = Constants.cornerRadius
        button.accessibilityIdentifier = "Authenticate"
        return button
    }()
    
    private var screenModel: AuthScreenModel = .empty {
        didSet { setup() }
    }
...
