...

final class ImagesListCell: UITableViewCell {
    static let reuseIdentifier = "ImagesListCell"
    weak var delegate: ImagesListCellDelegate?
    private lazy var likeButton: UIButton = {
        let button = UIButton()
        button.accessibilityIdentifier = "LikeButton"
        
        return button
    }()
    private var gradientLayer: CAGradientLayer?
    
    private lazy var gradientView: UIView = {
...
